tests/flow/lib/__snapshots__/jsfmt.spec.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`libtest.js - flow-verify 1`] = `
var x:string = NaN
var y:string = Number.MAX_VALUE;
var z:number = new TypeError().name;
var w:string = parseInt("...");

var a = new Map();
a.delete('foobar');

var b = undefined;
if (undefined) {
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
var x: string = NaN;
var y: string = Number.MAX_VALUE;
var z: number = new TypeError().name;
var w: string = parseInt("...");

var a = new Map();
a.delete("foobar");

var b = undefined;
if (undefined) {
}

`;
